fix: ajustes
