# app/Http/Controllers/AuthController.php
@@ -219,7 +219,7 @@ class AuthController extends Controller
      * Logout
      * @OA\Post (
      *     path="/api/logout",
-     *     tags={"Auth"},     *     
+     *     tags={"Auth"},       
      *      @OA\Response(
      *          response=200,
      *          description="Success",
@@ -314,4 +314,46 @@ class AuthController extends Controller
           ]
       ]);
   }
+
+    /**
+ * Refresh
+ * @OA\Get (
+ *     path="/api/users",
+ *     tags={"Auth"},
+ *      @OA\Response(
+ *          response=200,
+ *          description="Success",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="meta", type="object",
+ *                  @OA\Property(property="code", type="number", example=200),
+ *                  @OA\Property(property="status", type="string", example="success"),
+ *                  @OA\Property(property="message", type="string", example="Successfully logged out"),
+ *              ),
+ *              @OA\Property(property="data", type="object", example={}),
+ *          )
+ *      ),
+ *      @OA\Response(
+ *          response=401,
+ *          description="Invalid token",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="meta", type="object",
+ *                  @OA\Property(property="code", type="number", example=422),
+ *                  @OA\Property(property="status", type="string", example="error"),
+ *                  @OA\Property(property="message", type="string", example="Unauthenticated."),
+ *              ),
+ *              @OA\Property(property="data", type="object", example={}),
+ *          )
+ *      ),
+ *      security={
+ *         {"token": {}}
+ *     }
+ * )
+ */
+public function getAll()
+{
+    return response()->json([
+        'status' => 'success',
+        'user' => Auth::user()        
+    ]);
+}
 }
